--- a/index.html
+++ b/index.html
@@ -1,3 +1,21 @@
-Codes
-ATT TMO
-<a href="https://github.com/ishtiaqrasool/TMO-PQ-IEEE-Access-2020">TMO published in IEEE Access 2020</a>
+<html>
+
+<head>
+	<script language="JavaScript">
+	<!--
+		if (window != top) top.location.href = "index.html";
+	-->
+	</script>
+</head>
+
+<Title>Ishtiaq Rasool Khan</Title>
+
+<FRAMESET COLS="200,*" border=0>
+
+
+<Frame src="contents.html" SCROLLING="auto" MARGINHEIGHT=0 MARGINWIDTH=20>
+<Frame src="home.html" SCROLLING="auto" MARGINHEIGHT=0 MARGINWIDTH=20 name="main">
+
+</FRAMESET>
+
+</html>
