Lab files updated

--- a/Courses/ImageProcessing_2021_1/lab2.html
+++ b/Courses/ImageProcessing_2021_1/lab2.html
@@ -6,6 +6,19 @@
     }
 </style>
 
+<Title>Image Processing Labs</Title>
+
+<table width=60% height=10% border=0>
+    <tr>
+        <td> <a href="intro.html"> Introduction </a> </td>
+        <td> <a href="lab1.html"> Lab1 </a> </td>
+        <td> <a href="lab2.html"> Lab2 </a> </td>
+        <td> <a href="lab3.html"> Lab3 </a> </td>
+        <td> <a href="lab4.html"> Lab4 </a> </td>
+        <td> <a href="lab5.html"> Lab5 </a> </td>
+    </tr>
+</table>
+
 <body>
 
     <Title>Lab1 Excercises</Title>
