--- a/courses.html
+++ b/courses.html
@@ -5,7 +5,7 @@
 <body>
     <h1>Courses</h1>
 
-    <p>2021: Image Processing</p>
+    <p>2021: Image Processing  <a href=".\Courses\ImageProcessing_2021_1\intro.html">Labs</a> </p>
     <p>2021: Introduction to e-commerce</p>
     <p>2021: Design and Analysis of Algorithms</p>
     <p>2020: Algorithms and Data Structures</p>
