Styles and Image Processing Labs updated

--- a/Courses/ImageProcessing_2021_1/intro.html
+++ b/Courses/ImageProcessing_2021_1/intro.html
@@ -1,25 +1,23 @@
 <html>
-<style>
-    body {
-        background-color: powderblue;
-    }
-</style>
 
-<Title>Image Processing Labs</Title>
+<head>
+    <title>Image Processing Labs</title>
+    <link rel="stylesheet" href="../../myCSS.css">
+</head>
 
-<table width=60% height=10% border=0>
-    <tr>
-        <td> <a href="intro.html"> Introducction </a> </td>
-        <td> <a href="lab1.html"> Lab1 </a> </td>
-        <td> <a href="lab2.html"> Lab2 </a> </td>
-        <td> <a href="lab3.html"> Lab3 </a> </td>
-        <td> <a href="lab4.html"> Lab4 </a> </td>
-        <td> <a href="lab5.html"> Lab5 </a> </td>
-    </tr>
-</table>
+<button> <a href="intro.html"> Introduction </a></button>
+<button> <a href="lab1.html"> Lab1 </a></button>
+<button> <a href="lab2.html"> Lab2 </a></button>
+<button> <a href="lab3.html"> Lab3 </a></button>
+<button> <a href="lab4.html"> Lab4 </a></button>
+<button> <a href="lab5.html"> Lab5 </a></button>
+<button> <a href="lab6.html"> Lab6 </a></button>
+<button> <a href="lab7.html"> Lab7 </a></button>
+<button> <a href="lab8.html"> Lab8 </a></button>
+
 
 <body>
-    <h1>Introduction</h1>
+    <h1>Image Processing Lab Exercises</h1>
     <p>
         MATLAB Provides a few tutorials in the Help Center:<br>
         <a href="https://www.mathworks.com/help/matlab/getting-started-with-matlab.html">
@@ -34,7 +32,8 @@
         </li><br>
 
         <li>Matrices and Arrays<br>
-            MATLAB operates primarily on arrays and matrices, both in whole and in part. A matrix is a two-dimensional
+            MATLAB operates primarily on arrays and matrices, both in whole and in part. A matrix is a
+            two-dimensional
             array often used for linear algebra.
         </li><br>
 
@@ -52,7 +51,8 @@
 
         <li>
             Calling Functions <br>
-            MATLAB provides a large number of functions that perform computational tasks. To call a function, enclose
+            MATLAB provides a large number of functions that perform computational tasks. To call a function,
+            enclose
             its input arguments in parentheses.
         </li><br>
 
