--- a/courses.html
+++ b/courses.html
@@ -1,11 +1,14 @@
 <html>
 <head>
+
 <title>Courses</title>
+<link rel="stylesheet" href="myCSS.css">
 </head>
+
 <body>
     <h1>Courses</h1>
 
-    <p>2021: Image Processing  <a href=".\Courses\ImageProcessing_2021_1\intro.html">Labs</a> </p>
+    <p>2021: <a href=".\Courses\ImageProcessing_2021_1\intro.html">Image Processing</a> </p>
     <p>2021: Introduction to e-commerce</p>
     <p>2021: Design and Analysis of Algorithms</p>
     <p>2020: Algorithms and Data Structures</p>
