--- a/home.html
+++ b/home.html
@@ -2,35 +2,55 @@
 
 <head>
     <title>Ishtiaq Rasool Khan</title>
+    <link rel="stylesheet" href="myCSS.css">
 </head>
 
 <body>
-    <h2>Dr. Ishtiaq Rasool Khan</h2>
-    <p>Professor<br>
-        Department of Computer Science and AI<br>
-        Graduate School of Computer Science and Engineering<br>
-        Univesity of Jeddah, Saudi Arabia 21589<br>
-        irkhan at uj dot edu dot sa</p>
+    <table>
+        <tr>
+            <td>
+                <h1>Dr. Ishtiaq Rasool Khan</h1>
+                <p>Professor<br>
+                    Department of Computer Science and AI<br>
+                    Graduate School of Computer Science and Engineering<br>
+                    Univesity of Jeddah, Saudi Arabia 21589<br>
+                    irkhan at uj dot edu dot sa</p>
+                    <p style = "text-align: right;">
+                        أستاذ<br>
+                        علوم الحاسب والذكاء الاصطناعي<br>
+                        كلية علوم وهندسة الحاسب<br>
+                        جامعة جدة<br>
+                        المملكة العربية السعودية
+                    </p>
+            </td>
 
-    <h4>Previous Positions</h4>
+            <td>
+                <img src="images/Picture2.jpeg" width=100 height=128 style="float: right ;margin:50px">
+            </td>
+        </tr>
+    </table>
+
+    <button> <a href="https://scholar.google.com/citations?hl=en&user=kzApgPEAAAAJ" target="_blank">Google Scholar</a></button>
+    <button><a href="https://www.researchgate.net/profile/Ishtiaq-Khan-5" target="_blank">Researchgate</a></button>
+    <button><a href="https://www.scopus.com/authid/detail.uri?authorId=7402455645" target="_blank">Scopus</a></button>
+    <button><a href="https://publons.com/researcher/2589367/ishtiaq-r-khan/" target="_blank">Publons</a></button>
+    <button><a href="https://orcid.org/0000-0002-3887-9052" target="_blank">Orcid</a></button><br><br>
+
+    <h2>Previous Positions</h2>
     <p> 2012-2016: King Abdulaziz University<br>
         2008-2012: Institute for Incocomm Research, A*STAR. Singapore<br>
         2007-2008: Kyushu Institute of Technology, Japan<br>
         2002-2007: Kitakyushu University, Japan<br>
         2000-2002: Hokkaido University, Japan (JSPS Fellow)<br>
-        1998-2000: Hokkaido University, Japan (PhD)
-        1995-1998: Hokkaido Unviersity, Japan (MS)</p>
+        1998-2000: Hokkaido University, Japan (PhD)<br>
+        1995-1998: Hokkaido Unviersity, Japan (MS)</p><br>
 
-    <h4>Current Research Interests</h4>
+    <h2>Current Research Interests</h2>
     <p>Image Procesing, Video Processing, HDR imaging, Signal Processing, Data Analytics</p>
 
-    <br><br>
+    <br>
 
-    <a href="https://scholar.google.com/citations?hl=en&user=kzApgPEAAAAJ" target="_blank">Google Scholar</a><br>
-    <a href="https://www.researchgate.net/profile/Ishtiaq-Khan-5" target="_blank">Researchgate</a><br>
-    <a href="https://www.scopus.com/authid/detail.uri?authorId=7402455645" target="_blank">Scopus</a><br>
-    <a href="https://publons.com/researcher/2589367/ishtiaq-r-khan/" target="_blank">Publons</a><br>
-    <a href="https://orcid.org/0000-0002-3887-9052" target="_blank">Orcid</a>
+
 
 </body>
 
