--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 
 <head>
 	<script language="JavaScript">
-	<!--
+	< !--
 		if (window != top) top.location.href = "index.html";
-	-->
+		-->
 	</script>
+	
+	<link rel="stylesheet" href="myCSS.css">
+
 </head>
 
 <Title>Ishtiaq Rasool Khan</Title>
@@ -13,8 +16,8 @@
 <FRAMESET COLS="200,*" border=0>
 
 
-<Frame src="contents.html" SCROLLING="auto" MARGINHEIGHT=0 MARGINWIDTH=20>
-<Frame src="home.html" SCROLLING="auto" MARGINHEIGHT=0 MARGINWIDTH=20 name="main">
+	<Frame src="contents.html" SCROLLING="auto" MARGINHEIGHT=0 MARGINWIDTH=20>
+		<Frame src="home.html" SCROLLING="auto" MARGINHEIGHT=0 MARGINWIDTH=20 name="main">
 
 </FRAMESET>
 
