--- a/research.html
+++ b/research.html
@@ -2,7 +2,13 @@
 
 <head>
     <title>Research Experience</title>
+    <link rel="stylesheet" href="myCSS.css">
 </head>
+
+<button> <a href=".\Research\PhD_esummary.html" download>PhD Summary</a></button>
+<button> <a href=".\Research\PhD.exe" target="main">FIR Filter Design Tool based on PhD Research</a></button>
+<button> <a href=".\Research\MS_esummary.html">MS Summary</a></button>
+<button> <a href=".\Research\MS_jsummary.html">MS Summary (Japanese)</a></button>
 
 <body>
     <h1>Research experience (in chronological order)</h1>
