--- a/Courses/ImageProcessing_2021_1/lab2.html
+++ b/Courses/ImageProcessing_2021_1/lab2.html
@@ -1,23 +1,19 @@
 <html>
 
-<style>
-    body {
-        background-color: powderblue;
-    }
-</style>
-
-<Title>Image Processing Labs</Title>
-
-<table width=60% height=10% border=0>
-    <tr>
-        <td> <a href="intro.html"> Introduction </a> </td>
-        <td> <a href="lab1.html"> Lab1 </a> </td>
-        <td> <a href="lab2.html"> Lab2 </a> </td>
-        <td> <a href="lab3.html"> Lab3 </a> </td>
-        <td> <a href="lab4.html"> Lab4 </a> </td>
-        <td> <a href="lab5.html"> Lab5 </a> </td>
-    </tr>
-</table>
+    <head>
+        <title>Image Processing Labs</title>
+        <link rel="stylesheet" href="../../myCSS.css">
+    </head>
+    
+    <button> <a href="intro.html"> Introduction </a></button>
+    <button> <a href="lab1.html"> Lab1 </a></button>
+    <button> <a href="lab2.html"> Lab2 </a></button>
+    <button> <a href="lab3.html"> Lab3 </a></button>
+    <button> <a href="lab4.html"> Lab4 </a></button>
+    <button> <a href="lab5.html"> Lab5 </a></button>
+    <button> <a href="lab6.html"> Lab6 </a></button>
+    <button> <a href="lab7.html"> Lab7 </a></button>
+    <button> <a href="lab8.html"> Lab8 </a></button>
 
 <body>
 
