--- a/Courses/ImageProcessing_2021_1/lab4.html
+++ b/Courses/ImageProcessing_2021_1/lab4.html
@@ -1,23 +1,19 @@
 <html>
 
-<style>
-    body {
-        background-color: powderblue;
-    }
-</style>
+<head>
+    <title>Image Processing Labs</title>
+    <link rel="stylesheet" href="../../myCSS.css">
+</head>
 
-<Title>Image Processing Labs</Title>
-
-<table width=60% height=10% border=0>
-    <tr>
-        <td> <a href="intro.html"> Introduction </a> </td>
-        <td> <a href="lab1.html"> Lab1 </a> </td>
-        <td> <a href="lab2.html"> Lab2 </a> </td>
-        <td> <a href="lab3.html"> Lab3 </a> </td>
-        <td> <a href="lab4.html"> Lab4 </a> </td>
-        <td> <a href="lab5.html"> Lab5 </a> </td>
-    </tr>
-</table>
+<button> <a href="intro.html"> Introduction </a></button>
+<button> <a href="lab1.html"> Lab1 </a></button>
+<button> <a href="lab2.html"> Lab2 </a></button>
+<button> <a href="lab3.html"> Lab3 </a></button>
+<button> <a href="lab4.html"> Lab4 </a></button>
+<button> <a href="lab5.html"> Lab5 </a></button>
+<button> <a href="lab6.html"> Lab6 </a></button>
+<button> <a href="lab7.html"> Lab7 </a></button>
+<button> <a href="lab8.html"> Lab8 </a></button>
 
 <body>
 
@@ -31,35 +27,35 @@
     </ul>
 
     <p>
-        Exercise 1: Parameter tuning for Image Enhancement (Practice)<br>
+        <b>Exercise 1: Parameter tuning for Image Enhancement (Practice)</b><br>
         In this exercise, we will use a simple intensity transformation to enhance an image (Fig. 3.8(a) in the book).
         Use log transformation s = c log(1+r) (given in Eq.3.2-2). Experiment with different values of parameter c to
         obtain the best visual enhancement possible. Can you give a reason why this value of c is good?
         <br><br>
 
-        Exercise 2 (Marked)<br>
+        <b>Exercise 2 (Marked)</b><br>
         Parameter tuning is a major issue in image processing. In Ex1, we tuned the value of c. Repeat Ex1 by using
         power-law transformation s = c.r^g (Eq.3.2-3). In this case, there are two parameters c and g to adjust.
         Experiment with different values and find the values that give a decent result.
         <br><br>
 
-        Exercise 3 (Histogram calculation) (Practice)<br>
+        <b>Exercise 3 (Histogram calculation) (Practice)</b><br>
         Use MATLAB's built-in function hist to calculate the histogram of Fig. 3.8(a). Define a parameter n to describe
         the number of bins.
         <br><br>
 
-        Exercise 4 (Histogram calculation) (Marked)<br>
+        <b>Exercise 4 (Histogram calculation) (Marked)</b><br>
         Write a computer program (without using the built-in hist function) for computing the histogram of Fig.
         3.8(a). Use a parameter n to describe the number of bins. Compare your results with the built-in function used
         in Ex3.
         <br><br>
 
-        Exercise 5 (Histogram Equalization) (Practice)<br>
+        <b>Exercise 5 (Histogram Equalization) (Practice)</b><br>
         Apply the histogram equalization technique using the built-in function on Fig.3.8(a). Show the original image
         and its histogram, and the enhanced image and its histogram.
         <br><br>
 
-        Exercise 6 (Histogram Equalization) (Marked)<br>
+        <b> Exercise 6 (Histogram Equalization) (Marked)</b><br>
         Implement the histogram equalization technique without using the built-in function and apply it to Fig.3.8(a).
         Show the following:
         a) original image, its histogram,
@@ -69,9 +65,11 @@
         curve).
         <br><br>
 
-        Exercise 7 (Optional)(Bonus)<br>
-        You can see that the transformation curve and the enhanced image by the built-in MATLAB function are different
-        from yours (Change the value of n to 100 to see it more clearly.) Can you improve your implementation such that
+        <b> Exercise 7 (Optional)(Bonus)</b><br>
+        You can see that the transformation curve and the enhanced image by the built-in MATLAB function are
+        different
+        from yours (Change the value of n to 100 to see it more clearly.) Can you improve your implementation such
+        that
         both give identical (or very similar) results?
         <br><br>
 
