--- a/contents.html
+++ b/contents.html
@@ -1,28 +1,43 @@
 <html>
 
-<STYLE type="text/css">
-<!--
-A:hover {BACKGROUND: blue; COLOR: white;}
--->
-</STYLE>
-
-<body  bgcolor=f5f5f5 text=blue link=blue vlink=blue vertical-align: middle>
-
-<br><br><br><br>
+<head>
+    <title>Contents</title>
+    <link rel="stylesheet" href="myCSS.css">
+    <style>
+        body {background-color: lightblue;}
+    </style>
+</head>
 
 
-<table width=100% height=70% border=0>
+<body background-color: green>
 
-<tr><td><a href="home.html" target="main">Home</a></td></tr>
-<tr><td><a href="publications.html" target="main">Publications</a></td></tr>
-<tr><td><a href="projects.html" target="main">Projects</a></td></tr>
-<tr><td><a href="courses.html" target="main">Courses</a></td></tr>
-<tr><td><a href="research.html" target="main">Research</a></td></tr>
-<tr><td><a href="data_codes.html" target="main">Data and Codes</a></td></tr>
+    <br><br><br><br>
 
-</table>
 
-<br><br><br>
+    <table width=100% height=70% border=0>
+
+        <tr>
+            <td><a href="home.html" target="main">Home</a></td>
+        </tr>
+        <tr>
+            <td><a href="publications.html" target="main">Publications</a></td>
+        </tr>
+        <tr>
+            <td><a href="projects.html" target="main">Projects</a></td>
+        </tr>
+        <tr>
+            <td><a href="courses.html" target="main">Courses</a></td>
+        </tr>
+        <tr>
+            <td><a href="research.html" target="main">Research</a></td>
+        </tr>
+        <tr>
+            <td><a href="data_codes.html" target="main">Data and Codes</a></td>
+        </tr>
+
+    </table>
+
+    <br><br><br>
 
 
 </body>
