Styles and Image Processing Labs updated

--- a/Research/MS_esummary.html
+++ b/Research/MS_esummary.html
@@ -6,7 +6,7 @@
 </head>
 
 <button> <a href="PhD_esummary.html" download>PhD Summary</a></button>
-<button> <a href="PhD.exe" target="main">FIR Filter Design Tool based on PhD Research</a></button>
+<button> <a href="PhD.exe" download>FIR Filter Design Tool based on PhD Research</a></button>
 <button> <a href="MS_esummary.html">MS Summary</a></button>
 <button> <a href="MS_jsummary.html">MS Summary (Japanese)</a></button>
 <br>
