--- a/Research/MS_jsummary.html
+++ b/Research/MS_jsummary.html
@@ -7,10 +7,10 @@
         <link rel="stylesheet" href="..\myCSS.css">
     </head>
     
-<button> <a href="PhD_esummary.html" download>PhD Summary</a></button>
-<button> <a href="PhD.exe" target="main">FIR Filter Design Tool based on PhD Research</a></button>
-<button> <a href="MS_esummary.html">MS Summary</a></button>
-<button> <a href="MS_jsummary.html">MS Summary (Japanese)</a></button>
+    <button> <a href="PhD_esummary.html" download>PhD Summary</a></button>
+    <button> <a href="PhD.exe" download>FIR Filter Design Tool based on PhD Research</a></button>
+    <button> <a href="MS_esummary.html">MS Summary</a></button>
+    <button> <a href="MS_jsummary.html">MS Summary (Japanese)</a></button>
 
 <br>
 
