--- a/research.html
+++ b/research.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="myCSS.css">
 </head>
 
-<button> <a href=".\Research\PhD_esummary.html" download>PhD Summary</a></button>
-<button> <a href=".\Research\PhD.exe" target="main">FIR Filter Design Tool based on PhD Research</a></button>
+<button> <a href=".\Research\PhD_esummary.html">PhD Summary</a></button>
+<button> <a href=".\Research\PhD.exe" download>FIR Filter Design Tool based on PhD Research</a></button>
 <button> <a href=".\Research\MS_esummary.html">MS Summary</a></button>
 <button> <a href=".\Research\MS_jsummary.html">MS Summary (Japanese)</a></button>
 
