--- a/home.html
+++ b/home.html
@@ -15,13 +15,13 @@
                     Graduate School of Computer Science and Engineering<br>
                     Univesity of Jeddah, Saudi Arabia 21589<br>
                     irkhan at uj dot edu dot sa</p>
-                    <p style = "text-align: right;">
-                        أستاذ<br>
-                        علوم الحاسب والذكاء الاصطناعي<br>
-                        كلية علوم وهندسة الحاسب<br>
-                        جامعة جدة<br>
-                        المملكة العربية السعودية
-                    </p>
+                <p style="text-align: right;">
+                    أستاذ<br>
+                    علوم الحاسب والذكاء الاصطناعي<br>
+                    كلية علوم وهندسة الحاسب<br>
+                    جامعة جدة<br>
+                    المملكة العربية السعودية
+                </p>
             </td>
 
             <td>
@@ -30,20 +30,28 @@
         </tr>
     </table>
 
-    <button> <a href="https://scholar.google.com/citations?hl=en&user=kzApgPEAAAAJ" target="_blank">Google Scholar</a></button>
+    <button> <a href="https://scholar.google.com/citations?hl=en&user=kzApgPEAAAAJ" target="_blank">Google
+            Scholar</a></button>
     <button><a href="https://www.researchgate.net/profile/Ishtiaq-Khan-5" target="_blank">Researchgate</a></button>
     <button><a href="https://www.scopus.com/authid/detail.uri?authorId=7402455645" target="_blank">Scopus</a></button>
     <button><a href="https://publons.com/researcher/2589367/ishtiaq-r-khan/" target="_blank">Publons</a></button>
     <button><a href="https://orcid.org/0000-0002-3887-9052" target="_blank">Orcid</a></button><br><br>
 
+    <h2>Office Hours</h2>
+    <p>Monday, Wednesday (By appointment through email)</p>
+    
     <h2>Previous Positions</h2>
     <p> 2012-2016: King Abdulaziz University<br>
         2008-2012: Institute for Incocomm Research, A*STAR. Singapore<br>
         2007-2008: Kyushu Institute of Technology, Japan<br>
         2002-2007: Kitakyushu University, Japan<br>
-        2000-2002: Hokkaido University, Japan (JSPS Fellow)<br>
-        1998-2000: Hokkaido University, Japan (PhD)<br>
-        1995-1998: Hokkaido Unviersity, Japan (MS)</p><br>
+        2000-2002: Hokkaido University, Japan (JSPS Fellow)<br><br>
+
+        1998-2000: (PhD, Digital Filters) Hokkaido University, Japan<br>
+        1996-1998: (MS, Information Engineering) Hokkaido Unviersity, Japan<br>
+        1992-1994: (MS, Systems Engineering) Quaid-e-Azam University, Islamabad, Pakistan <br>
+        1987-1992: (BS, Electrical Engineering) UET Lahore (Taxila Campus), Pakistan <bR>
+    </p>
 
     <h2>Current Research Interests</h2>
     <p>Image Procesing, Video Processing, HDR imaging, Signal Processing, Data Analytics</p>
