--- a/publications.html
+++ b/publications.html
@@ -9,6 +9,14 @@
     <h1>Publications</h1>
     <h2>2021</h2>
 
+    <p><b>Assessing the Performance of Image Quality Assessment Metrics</b><br>        
+        T Alotaibi, F. Bourennani, IR Khan<br>
+        IEEE International Workshop on Multimedia Signal Processing (MMSP)    </p>
+
+    <p><b>Mobile Registration Number Plate Recognition Using Artificial Intelligence</b>        
+        STA Ali, AH Usama, IR Khan, MM Khan, A Siddiq
+        IEEE International Conference on Image Processing (ICIP), 944-948    </p>
+
     <p><b>A non-uniform quantization scheme for visualization of CT images</b><br>
         A Mehmood, IR Khan, H Dawood, H Dawood<br>
         Mathematical Biosciences and Engineering: MBE, 18 (4) 4311-4326</p>
