--- a/contents.html
+++ b/contents.html
@@ -4,7 +4,7 @@
     <title>Contents</title>
     <link rel="stylesheet" href="myCSS.css">
     <style>
-        body {background-color: lightblue;}
+        body {background-color: rgb(230, 232, 233);}
     </style>
 </head>
 
@@ -14,7 +14,7 @@
     <br><br><br><br>
 
 
-    <table width=100% height=70% border=0>
+    <table width=100%  border=0>
 
         <tr>
             <td><a href="home.html" target="main">Home</a></td>
