--- a/courses.html
+++ b/courses.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Courses</h1>
 
+    <p>2022-I: Design and Analysis of Algorithms</p>
+    <p>2022-I: Scientific Research Methods</p>
     <p>2021: <a href=".\Courses\ImageProcessing_2021_1\intro.html">Image Processing</a> </p>
     <p>2021: Introduction to e-commerce</p>
     <p>2021: Design and Analysis of Algorithms</p>
