--- a/projects.html
+++ b/projects.html
@@ -90,7 +90,7 @@
 
     <h2>2008-2012 (I2R Singapore)</h2>
 
-    <p><b>M-Clothing: Mixed Reality Clothing</b><br>
+    <p><b><a href="./Research/M-Clothing.html">M-Clothing: Mixed Reality Clothing</a></b><br>
         Ishtiaq Rasool Khan (PI, I2R Singapore), Mialolong Yuan, Arthur Niswar, Farzam Farbiz<br>
         Funding: I2R A*STAR Singapore (500,000 SGD) <br>
         Status: Completed</p>
