lit review blogadded

--- a/Research/M-Clothing.html
+++ b/Research/M-Clothing.html
@@ -13,7 +13,7 @@
 <body>
 
     <h1>Mixed Reality Clothing, A*STAR, Singapore</h1>
-    <b>Members: </b>b>Ishtiaq Rasool Khan (PI), Mialolong Yuan, Arthur Niswar, Farzam Farbiz (Program Manager)<br>
+    <b>Members: </b>Ishtiaq Rasool Khan (PI), Mialolong Yuan, Arthur Niswar, Farzam Farbiz (Program Manager)<br>
     Funding: I2R A*STAR Singapore (500,000 SGD)
     Status: Completed
     <br><br>
