--- a/contents.html
+++ b/contents.html
@@ -34,6 +34,9 @@
         <tr>
             <td><a href="data_codes.html" target="main">Data and Codes</a></td>
         </tr>
+        <tr>
+            <td><a href="blogs.html" target="main">Blogs</a></td>
+        </tr>
 
     </table>
 
