--- a/publications.html
+++ b/publications.html
@@ -9,22 +9,24 @@
     <h1>Publications</h1>
     <h2>2021</h2>
 
-    <p><b>Assessing the Performance of Image Quality Assessment Metrics</b><br>        
+    <p><b>Assessing the Performance of Image Quality Assessment Metrics</b><br>
         T Alotaibi, F. Bourennani, IR Khan<br>
-        IEEE International Workshop on Multimedia Signal Processing (MMSP)    </p>
+        IEEE International Workshop on Multimedia Signal Processing (MMSP) </p>
 
-    <p><b>Mobile Registration Number Plate Recognition Using Artificial Intelligence</b>        
+    <p><b>Mobile Registration Number Plate Recognition Using Artificial Intelligence</b>
         STA Ali, AH Usama, IR Khan, MM Khan, A Siddiq
-        IEEE International Conference on Image Processing (ICIP), 944-948    </p>
+        IEEE International Conference on Image Processing (ICIP), 944-948 </p>
 
     <p><b>A non-uniform quantization scheme for visualization of CT images</b><br>
         A Mehmood, IR Khan, H Dawood, H Dawood<br>
-        Mathematical Biosciences and Engineering: MBE, 18 (4) 4311-4326</p>
+        Mathematical Biosciences and Engineering: MBE, 18 (4) 4311-4326
+        <button> <a href="https://github.com/ishtiaqrasool/Divisive-Clustering" target="_blank">Code</a></a></button>
+    </p>
 
     <h2>2020</h2>
 
     <p><b>Machine learning based classification of normal, slow and fast walking by extracting multimodal features from
-        stride interval time series</b><br>
+            stride interval time series</b><br>
         W Aziz, L Hussain, IR Khan, JS Alowibdi, MH Alkinani<br>
         Mathematical Biosciences and Engineering 18 (1), 495-517 </p>
 
@@ -33,7 +35,7 @@
         APSIPA Annual Summit and Conference, Auckland, New Zealand, 1132-1138 </p>
 
     <p><b>Machine learning based congestive heart failure detection using feature importance ranking of multimodal
-        features</b><br>
+            features</b><br>
         L Hussain, W Aziz, IR Khan, MH Alkinani, JS Alowibdi<br>
         Mathematical Biosciences and Engineering 18 (1), 69-91 </p>
 
@@ -42,7 +44,7 @@
         ACM SIGGRAPH 2020 Posters, 1-2 </p>
 
     <p><b>Machine learning based cost effective electricity load forecasting model using correlated meteorological
-        parameters</b><br>
+            parameters</b><br>
         M Jawad, MSA Nadeem, SO Shim, IR Khan, A Shaheen, N Habib, ...<br>
         IEEE Access 8, 146847-146864 </p>
 
@@ -61,8 +63,9 @@
 
     <h2>2019</h2>
 
-    <p><b>Class association and attribute relevancy based imputation algorithm to reduce Twitter data for optimal sentiment
-        analysis</b><br>
+    <p><b>Class association and attribute relevancy based imputation algorithm to reduce Twitter data for optimal
+            sentiment
+            analysis</b><br>
         M Bibi, MSA Nadeem, IH Khan, SO Shim, IR Khan, U Naqvi, W Aziz<br>
         IEEE Access 7, 136535-136544 </p>
 
@@ -71,7 +74,7 @@
         ACM SIGGRAPH 2019 Posters, 1-2 </p>
 
     <p><b>Analyzing the dynamics of lung cancer imaging data using refined fuzzy entropy methods by extracting different
-        features</b><br>
+            features</b><br>
         L Hussain, W Aziz, AA Alshdadi, MSA Nadeem, IR Khan<br>
         IEEE Access 7, 64704-64721 </p>
 
