--- a/contents.html
+++ b/contents.html
@@ -35,7 +35,7 @@
             <td><a href="data_codes.html" target="main">Data and Codes</a></td>
         </tr>
         <tr>
-            <td><a href="Blogs.html" target="main">Blogs</a></td>
+            <td><a href="blogs.html" target="main">Blogs</a></td>
         </tr>
 
     </table>
