--- a/home.html
+++ b/home.html
@@ -27,6 +27,7 @@
             <td>
                 <img src="images/Picture2.jpeg" width=100 height=128 style="float: right ;margin:50px">
             </td>
+<td> <p> Our work on evaluation of Tone-mapped Image quality Assessment metrics has been accepted in <b> IEEE Transactions in Image Processing</b>. </p>
         </tr>
     </table>
 
